2005-11-11  Ethan Merritt  <merritt@u.washington.edu>

	* term/metapost.trm: Update driver to support version 4.1 features.
	Implement general text rotation.
	Add partial density solid fill support for rectangles and polygons,
	with pattern fill implemented as incremental density solid fill.
	Fix bugs in terminal option font parsing.
	Keep track of dash pattern independent of line color

2005-11-09  Ethan Merritt  <merritt@u.washington.edu>

	* src/term.c (do_arrow): Revert previous patch, since it seems
	the bad effects outweigh the good.

2005-11-08  Ethan Merritt  <merritt@u.washington.edu>

	* src/term.c (do_arrow): Add a work-around for broken behaviour
	by the postscript terminal.  post.trm does not correctly report
	the current canvas size, so arrows cannot be clipped against the
	canvas boundaries if the current terminal is post.trm. The proper
	fix is probably in post.trm itself, but it potentially affects
	many aspects of plot layout so I am reluctant to make the change
	there.

2005-11-01  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot3d.c (eval_3dplots): Fix logic bug in vector style
	initialization.  Replicate vector line style properties stored
	in arrow_properties into plot's main lp_properties.

2005-10-31  Harald Harders  <h.harders@tu-bs.de>

	* term/post.trm (PS_options): Add flags to track whether terminal
	options have been set; issue error on attempt set option twice.

2005-10-26  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Updated 'help matrix' and 'help matrix ascii'.

2005-10-23  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (adjust_binary_use_spec): Interpret the command
	"plot <foo> matrix" as equivalent to "plot <foo> matrix using 1:3".

2005-10-22  Harald Harders  <h.harders@tu-bs.de>

	* term/pslatex.trm (EPSLATEX_set_color): Fix bug in setting
	pure black or white via a gray value.

2005-10-22  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_open): Fix [very] long-standing bug