@@ -1,3 +1,9 @@
+2005-11-11  Harald Harders  <h.harders@tu-bs.de>
+
+	* src/axis.c (axis_output_tics): Normally the tics are placed to
+	dodge the border line.  If the border line is not drawn, then do
+	not try to dodge it.
+
 2005-11-11  Ethan Merritt  <merritt@u.washington.edu>
 
 	* term/metapost.trm: Update driver to support version 4.1 features.
